# hayate-mcp

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/research/: pyodide.md  workers-do.md
examples/echo/: server.py
examples/workers/: entry.py  pyproject.toml  wrangler.toml
spike/sdk-workers/: .gitignore  entry.py  pylock.toml  pyproject.toml  wrangler.toml
src/hayate_mcp/: __init__.py  authorization.py  mount.py  session.py  workers.py
tests/: conftest.py  test_app_integration.py  test_authorization.py  test_e2e_client.py  test_get_stream.py  test_protocol_version.py  test_stateless.py  test_transport.py
