[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "hayate-mcp"
version = "0.6.1"
description = "MCP Streamable HTTP for hayate across ASGI and Cloudflare Workers, with OAuth resource-server support"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yusuke Hayashi" }]
keywords = ["hayate", "mcp", "model-context-protocol", "workers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["hayate>=0.6.0", "mcp>=1.12"]

[project.urls]
Repository = "https://github.com/hayatepy/hayate-mcp"
Documentation = "https://github.com/hayatepy/hayate-mcp#readme"
Changelog = "https://github.com/hayatepy/hayate-mcp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "uvicorn>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["spike"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
